[package]
name = "hit_n_run"
version = "0.1.2"
authors = ["lhernandezcruz <lhernandezcruz@g.hmc.edu>"]

[dependencies]
piston = "0.31.1"
piston2d-graphics = "0.21.1"
pistoncore-glutin_window = "0.35.0"
piston2d-opengl_graphics = "0.40.0"
rand = "0.3"
find_folder = "0.3.0"

[[bin]]
name = "main"
doc = false
